--- a/.github/workflows/changelog_checks.yml
+++ b/.github/workflows/changelog_checks.yml
@@ -3,7 +3,8 @@ on:
   pull_request:
     paths:
       - CHANGELOG.md
-
+    branches-ignore: # ignore all for downstream, no GITHUB_TOKEN
+      - '**'
 jobs:
   PRCheck:
     name: PR Check
