Ignore github action because of missing secret

--- a/.github/workflows/changelog_checks.yml
+++ b/.github/workflows/changelog_checks.yml
@@ -3,6 +3,8 @@ on:
   pull_request:
     paths:
       - CHANGELOG.md
+    branches-ignore: # ignore all for downstream
+      - '**'
 
 jobs:
   PRCheck:
