--- a/.github/workflows/babbel.yml
+++ b/.github/workflows/babbel.yml
@@ -32,8 +32,10 @@ jobs:
             dep ensure
         fi
 
-    - name: install tools
-      run: make tools
+    - name: install linter
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.24.0
+	      ./bin/golangci-lint --version
 
     - name: sanity-check
       run: |
