--- a/.github/workflows/providerlint.yml
+++ b/.github/workflows/providerlint.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: [custom, linux, small]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568
         with:
           go-version-file: go.mod
       - name: go env
@@ -45,7 +45,7 @@ jobs:
     runs-on: [custom, linux, medium]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568
         with:
           go-version-file: go.mod
       - name: go env
