--- a/.github/workflows/skaff.yml
+++ b/.github/workflows/skaff.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568
         with:
           go-version-file: skaff/go.mod
       # See also: https://github.com/actions/setup-go/issues/54
