Uses `go.mod` for Go version in GHA

--- a/.github/workflows/acctest-terraform-lint.yml
+++ b/.github/workflows/acctest-terraform-lint.yml
@@ -7,10 +7,10 @@ on:
   pull_request:
     paths:
       - .github/workflows/acctest-terraform-lint.yml
-      - .go-version
       - .ci/.tflint.hcl
       - .ci/scripts/validate-terraform.sh
       - .ci/tools/go.mod
+      - go.sum
       - 'internal/service/**/*_test.go'
 
 jobs:
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version-file: .go-version
+          go-version-file: go.mod
       - uses: actions/cache@v3
         continue-on-error: true
         timeout-minutes: 2
@@ -48,7 +48,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version-file: .go-version
+          go-version-file: go.mod
       - uses: actions/cache@v3
         continue-on-error: true
         timeout-minutes: 2
