--- a/.actrc
+++ b/.actrc
@@ -1,3 +1,3 @@
 # Needed for testing our workflows
 -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-22.04
--P medium=ghcr.io/catthehacker/ubuntu:act-22.04
+-P linux=ghcr.io/catthehacker/ubuntu:act-22.04
