--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,8 +8,8 @@ on:
       - .ci/.markdownlinkcheck.json
       - .markdownlint.yml
       - .github/workflows/documentation.yml
-      - .go-version
       - docs/**
+      - go.mod
 
 jobs:
   markdown-link-check:
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version-file: .go-version
+          go-version-file: go.mod
       - uses: actions/cache@v3
         continue-on-error: true
         timeout-minutes: 2
