--- a/.github/workflows/providerlint.yml
+++ b/.github/workflows/providerlint.yml
@@ -9,7 +9,6 @@ on:
     paths:
       - .ci/scripts/providerlint.sh
       - .github/workflows/providerlint.yml
-      - .go-version
       - GNUmakefile
       - go.sum
       - internal/**
@@ -23,7 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version-file: .go-version
+          go-version-file: go.mod
       - name: go env
         run: echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
       - uses: actions/cache@v3
@@ -48,7 +47,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version-file: .go-version
+          go-version-file: go.mod
       - name: go env
         run: echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
       - uses: actions/cache@v3
