--- a/.github/workflows/skaff.yml
+++ b/.github/workflows/skaff.yml
@@ -20,7 +20,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v3
         with:
-          go-version-file: .go-version
+          go-version-file: skaff/go.mod
       # See also: https://github.com/actions/setup-go/issues/54
       - name: go env
         run: |
