--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -10,7 +10,6 @@ on:
   pull_request:
     paths:
       - .github/workflows/website.yml
-      - .go-version
       - .ci/.markdownlinkcheck.json
       - .ci/.tflint.hcl
       - .ci/tools/go.mod
@@ -79,7 +78,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version-file: .go-version
+          go-version-file: .ci/tools/go.mod
       - uses: actions/cache@v3
         continue-on-error: true
         timeout-minutes: 2
@@ -95,7 +94,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version-file: .go-version
+          go-version-file: .ci/tools/go.mod
       - uses: actions/cache@v3
         continue-on-error: true
         timeout-minutes: 2
@@ -113,7 +112,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v3
         with:
-          go-version-file: .go-version
+          go-version-file: .ci/tools/go.mod
       - uses: actions/cache@v3
         continue-on-error: true
         timeout-minutes: 2
