--- a/.github/labeler-pr-triage.yml
+++ b/.github/labeler-pr-triage.yml
@@ -346,6 +346,7 @@ service/ec2:
   - 'website/**/ec2_fleet*'
   - 'website/**/ec2_host*'
   - 'website/**/ec2_instance_*'
+  - 'website/**/ec2_public_ipv4_pool*'
   - 'website/**/ec2_serial_*'
   - 'website/**/ec2_spot_*'
   - 'website/**/ec2_tag*'
