--- a/.github/workflows/providerlint.yml
+++ b/.github/workflows/providerlint.yml
@@ -7,7 +7,6 @@ on:
       - 'release/**'
   pull_request:
     paths:
-      - .ci/scripts/providerlint.sh
       - .github/workflows/providerlint.yml
       - GNUmakefile
       - go.sum
@@ -15,33 +14,7 @@ on:
       - names/**
 
 jobs:
-  providerlinta:
-    name: 1 of 2
-    runs-on: [custom, linux, small]
-    steps:
-      - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
-      - uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9
-        with:
-          go-version-file: go.mod
-      - name: go env
-        run: echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
-      - uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8
-        continue-on-error: true
-        timeout-minutes: 2
-        with:
-          path: ${{ env.GOCACHE }}
-          key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
-      - uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8
-        continue-on-error: true
-        timeout-minutes: 2
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-      - run: cd .ci/providerlint && go install -buildvcs=false .
-      - run: .ci/scripts/providerlint.sh ec2
-  providerlintb:
-    name: 2 of 2
-    needs: [providerlinta]
+  providerlint:
     runs-on: [custom, linux, medium]
     steps:
       - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
