--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,7 +18,7 @@ jobs:
       UV_THREADPOOL_SIZE: 128
     steps:
       - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
-      - uses: YakDriver/md-check-links@v2.0.5
+      - uses: YakDriver/md-check-links@9044b7162323b91150cef35355e1a3514564aa82
         with:
           use-quiet-mode: 'yes'
           use-verbose-mode: 'yes'
