--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
-      - uses: YakDriver/md-check-links@v2.0.5
+      - uses: YakDriver/md-check-links@9044b7162323b91150cef35355e1a3514564aa82
         name: markdown-link-check website/docs/**/[a-h].markdown
         with:
           use-quiet-mode: "yes"
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
-      - uses: YakDriver/md-check-links@v2.0.5
+      - uses: YakDriver/md-check-links@9044b7162323b91150cef35355e1a3514564aa82
         name: markdown-link-check website/docs/**/[i-z].markdown
         with:
           use-quiet-mode: "yes"
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
-      - uses: YakDriver/md-check-links@v2.0.5
+      - uses: YakDriver/md-check-links@9044b7162323b91150cef35355e1a3514564aa82
         name: markdown-link-check website/docs/**/*.md
         with:
           use-quiet-mode: "yes"
