--- a/.github/workflows/firewatch.yml
+++ b/.github/workflows/firewatch.yml
@@ -17,7 +17,7 @@ jobs:
           slack_token: ${{ secrets.SLACK_BOT_TOKEN }}
           slack_channel: ${{ secrets.SLACK_CHANNEL }}
       - name: UploadArtifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce
         with:
           name: firewatch
           path: firewatch.data
