Validates TeamCity configuration on branch push

--- a/.github/workflows/gen-teamcity.yml
+++ b/.github/workflows/gen-teamcity.yml
@@ -1,5 +1,9 @@
 name: TeamCity Config Generator
 on:
+  push:
+    branches:
+      - main
+      - "release/**"
   pull_request:
     paths:
       - .teamcity/**
