--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -20,7 +20,7 @@ jobs:
       changed: ${{ steps.filter.outputs.changed }}
     steps:
       - uses: dorny/paths-filter@4512585405083f25c027a35db413c2b3b9006d50
-        if: (github.event_name == 'pull_request_target' && !needs.community_check.outputs.maintainer)
+        if: github.event_name == 'pull_request_target' && needs.community_check.outputs.maintainer == 'false'
         id: filter
         with:
           filters: |
