--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -31,7 +31,7 @@ jobs:
 
   comment:
     needs: changes
-    if: needs.changes.outputs.changed
+    if: needs.changes.outputs.changed == 'true'
     name: Comment
     runs-on: ubuntu-latest
     steps:
