--- a/.github/labeler-pr-triage.yml
+++ b/.github/labeler-pr-triage.yml
@@ -326,6 +326,9 @@ service/dms:
 service/docdb:
   - 'internal/service/docdb/**/*'
   - 'website/**/docdb_*'
+service/docdbelastic:
+  - 'internal/service/docdbelastic/**/*'
+  - 'website/**/docdbelastic_*'
 service/drs:
   - 'internal/service/drs/**/*'
   - 'website/**/drs_*'
