--- a/.github/labeler-issue-triage.yml
+++ b/.github/labeler-issue-triage.yml
@@ -105,6 +105,8 @@ service/chimesdkmeetings:
   - '((\*|-)\s*`?|(data|resource)\s+"?)aws_chimesdkmeetings_'
 service/chimesdkmessaging:
   - '((\*|-)\s*`?|(data|resource)\s+"?)aws_chimesdkmessaging_'
+service/chimesdkvoice:
+  - '((\*|-)\s*`?|(data|resource)\s+"?)aws_chimesdkvoice_'
 service/cloud9:
   - '((\*|-)\s*`?|(data|resource)\s+"?)aws_cloud9_'
 service/cloudcontrol:
