Add AWS Clean Rooms Service Client (#30707)
* Add AWS Clean Rooms Service Client

* chore: go mod tidy

* chore: add cleanrooms service directory

* chore: make gen again

---------

Co-authored-by: Jared Baker <jared.baker@hashicorp.com>

--- a/.github/labeler-issue-triage.yml
+++ b/.github/labeler-issue-triage.yml
@@ -107,6 +107,8 @@ service/chimesdkmessaging:
   - '((\*|-)\s*`?|(data|resource)\s+"?)aws_chimesdkmessaging_'
 service/chimesdkvoice:
   - '((\*|-)\s*`?|(data|resource)\s+"?)aws_chimesdkvoice_'
+service/cleanrooms:
+  - '((\*|-)\s*`?|(data|resource)\s+"?)aws_cleanrooms_'
 service/cloud9:
   - '((\*|-)\s*`?|(data|resource)\s+"?)aws_cloud9_'
 service/cloudcontrol:
